ncc/testsuite/positive/Issue-1294.n
using System.Console;
using System.Collections.Generic;

public module Program
{
  public Foo() : IEnumerable[int]
  {
    def f()
    {
      foreach(_ in [] : IEnumerable[int]) // add try/finally !
        (); 
      1
    }
    while(true)
      yield f();
  }
  
  public Main() : void { _ = Foo(); }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/